--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 h1 {
   font-size: 3rem;
   font-weight: 900;
@@ -60,13 +64,16 @@ body {
   position: relative;
   padding: 10px;
   margin: 1rem;
-  /* background-color: aqua; */
+
+  width: 50%;
+  z-index: 2;
 }
 
 .flashyHeader {
-  font-size: 5rem;
+  font-size: 7rem;
   font-family: sans-serif;
-  font-weight: 600;
+  font-style: italic;
+  font-weight: 900;
 }
 
 .flashyShadow {
@@ -76,7 +83,14 @@ body {
   color: #0eaa1b;
   z-index: -1;
 
+  opacity: 0;
+}
+.flashyHeaderContainer:hover .flashyShadow {
+  opacity: 1;
   animation: flashy1 2s steps(1) infinite, flashy2 0.8s steps(1) infinite, flashy3 1s steps(1) infinite;
+}
+.flashyHeaderContainer:hover {
+  cursor: pointer;
 }
 
 @keyframes flashy1 {
