--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ h1 {
   height: 100px;
   margin: 0 auto;
 }
-span {
+.coolspan {
   color: red;
   background-color: aqua;
   margin: 3rem;
@@ -65,7 +65,6 @@ body {
   padding: 10px;
   margin: 1rem;
 
-  width: 50%;
   z-index: 2;
 }
 
@@ -89,6 +88,15 @@ body {
   opacity: 1;
   animation: flashy1 2s steps(1) infinite, flashy2 0.8s steps(1) infinite, flashy3 1s steps(1) infinite;
 }
+
+.flashyspan {
+  opacity: 0;
+}
+
+.flashyHeaderContainer:hover .flashyspan {
+  opacity: 1;
+}
+
 .flashyHeaderContainer:hover {
   cursor: pointer;
 }
@@ -140,7 +148,7 @@ body {
     left: 20px;
   }
   75% {
-    left: 0;
+    left: 20px;
   }
   100% {
     left: 0;
