--- a/styles.css
+++ b/styles.css
@@ -196,3 +196,15 @@ body {
   text-orientation: upright;
   background-color: #60e4643a;
 }
+
+.overlap {
+  font-size: 3rem;
+  display: inline-block;
+}
+
+.overlap1 {
+  translate: -100% 0%;
+}
+.overlap2 {
+  translate: -200% 0%;
+}
