--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,19 @@ body {
 .overlap2 {
   translate: -200% 0%;
 }
+h3 {
+  margin-bottom: 15px;
+}
+a {
+  font-family: sans-serif;
+  color: #ffffff;
+  background-color: #2274a5;
+  padding: 0.5rem;
+  border-radius: 5px;
+  margin: 2px;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: #e83f6f;
+}
